@@ -1,3 +1,6 @@
+- Issue #18996: TestCase.assertEqual() now more cleverly shorten differing
+  strings in error report.
+
 - Issue #18937: Add an assertLogs() context manager to unittest.TestCase
   to ensure that a block of code emits a message using the logging module.
 
